# MeshIntersectionVolume

./: CMakeLists.txt  debugutils.hpp  globals.h  intersect.cpp  launcher.cpp  mesh.cpp  mesh.h  readme.md
glm/ext/: vec1.hpp
impl/: evaluation.inl  gpu.inl
implementation/: CMakeLists.txt  evaluation.h  intersect.h  launcher.cpp  localized.cpp  localized.h  mesh.cpp
implementation/impl/: cpu.inl  evaluation.inl
implementation/meshes/: puzzle.stl  puzzle2.stl  sphere10.stl  sphere100.stl  sphere30.stl  tetrahedron.stl  unit-cube.stl
implementation/visualize/: visualize.cpp
implementation/visualize/include/: visualize.h
implementation/visualize/shaders/: line_fragment.glsl  line_vertex.glsl
meshes/: puzzle-single-slice.stl  puzzle-single.stl  sphere20.stl  sphere200.stl  sphere5.stl  sphere50.stl  tube.stl
thesis/: thesis-errata.md
visualize/: CMakeLists.txt  visualize.cpp  visualize.h
visualize/shaders/: line_geometry.glsl  shaders.qrc  wireframe_fragment.glsl  wireframe_geometry.glsl  wireframe_vertex.glsl
